{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 43,
  "lineage": "0417c1ad-8130-0ced-889d-dc88997b828a",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d7b3e3916a28bd9",
            "domain": "vpc",
            "id": "eipalloc-03d7b3e3916a28bd9",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-18-236-22-52.us-west-2.compute.amazonaws.com",
            "public_ip": "18.236.22.52",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:046839780821:internet-gateway/igw-003f3a102c85f7990",
            "id": "igw-003f3a102c85f7990",
            "owner_id": "046839780821",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-00a7addb1722745a6"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d7b3e3916a28bd9",
            "connectivity_type": "public",
            "id": "nat-093869c3b384bfb7e",
            "network_interface_id": "eni-02d693981feb95a28",
            "private_ip": "10.0.1.114",
            "public_ip": "18.236.22.52",
            "subnet_id": "subnet-01ce67268ad3caf11",
            "tags": {
              "Environment": "dev",
              "Name": "nat"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d83582174bd4f6d81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-093869c3b384bfb7e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d83582174bd4f6d8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-003f3a102c85f7990",
            "id": "r-rtb-0984530da3d5c613c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0984530da3d5c613c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:046839780821:route-table/rtb-0d83582174bd4f6d8",
            "id": "rtb-0d83582174bd4f6d8",
            "owner_id": "046839780821",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a7addb1722745a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:046839780821:route-table/rtb-0984530da3d5c613c",
            "id": "rtb-0984530da3d5c613c",
            "owner_id": "046839780821",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a7addb1722745a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c9aad7fc960899b",
            "route_table_id": "rtb-0d83582174bd4f6d8",
            "subnet_id": "subnet-076b38c5b0a0b3f63"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c9aad7fc960899b",
            "route_table_id": "rtb-0d83582174bd4f6d8",
            "subnet_id": "subnet-076b38c5b0a0b3f63"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c9aad7fc960899b",
            "route_table_id": "rtb-0d83582174bd4f6d8",
            "subnet_id": "subnet-076b38c5b0a0b3f63"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c9aad7fc960899b",
            "route_table_id": "rtb-0d83582174bd4f6d8",
            "subnet_id": "subnet-076b38c5b0a0b3f63"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c9aad7fc960899b",
            "route_table_id": "rtb-0d83582174bd4f6d8",
            "subnet_id": "subnet-076b38c5b0a0b3f63"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c9aad7fc960899b",
            "route_table_id": "rtb-0d83582174bd4f6d8",
            "subnet_id": "subnet-076b38c5b0a0b3f63"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c9aad7fc960899b",
            "route_table_id": "rtb-0d83582174bd4f6d8",
            "subnet_id": "subnet-076b38c5b0a0b3f63"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c9aad7fc960899b",
            "route_table_id": "rtb-0d83582174bd4f6d8",
            "subnet_id": "subnet-076b38c5b0a0b3f63"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c9aad7fc960899b",
            "route_table_id": "rtb-0d83582174bd4f6d8",
            "subnet_id": "subnet-076b38c5b0a0b3f63"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c9aad7fc960899b",
            "route_table_id": "rtb-0d83582174bd4f6d8",
            "subnet_id": "subnet-076b38c5b0a0b3f63"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c9aad7fc960899b",
            "route_table_id": "rtb-0d83582174bd4f6d8",
            "subnet_id": "subnet-076b38c5b0a0b3f63"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c9aad7fc960899b",
            "route_table_id": "rtb-0d83582174bd4f6d8",
            "subnet_id": "subnet-076b38c5b0a0b3f63"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0527a36957ba4df4c",
            "route_table_id": "rtb-0984530da3d5c613c",
            "subnet_id": "subnet-01ce67268ad3caf11"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0527a36957ba4df4c",
            "route_table_id": "rtb-0984530da3d5c613c",
            "subnet_id": "subnet-01ce67268ad3caf11"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0527a36957ba4df4c",
            "route_table_id": "rtb-0984530da3d5c613c",
            "subnet_id": "subnet-01ce67268ad3caf11"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0527a36957ba4df4c",
            "route_table_id": "rtb-0984530da3d5c613c",
            "subnet_id": "subnet-01ce67268ad3caf11"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0527a36957ba4df4c",
            "route_table_id": "rtb-0984530da3d5c613c",
            "subnet_id": "subnet-01ce67268ad3caf11"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0527a36957ba4df4c",
            "route_table_id": "rtb-0984530da3d5c613c",
            "subnet_id": "subnet-01ce67268ad3caf11"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0527a36957ba4df4c",
            "route_table_id": "rtb-0984530da3d5c613c",
            "subnet_id": "subnet-01ce67268ad3caf11"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0527a36957ba4df4c",
            "route_table_id": "rtb-0984530da3d5c613c",
            "subnet_id": "subnet-01ce67268ad3caf11"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0527a36957ba4df4c",
            "route_table_id": "rtb-0984530da3d5c613c",
            "subnet_id": "subnet-01ce67268ad3caf11"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0527a36957ba4df4c",
            "route_table_id": "rtb-0984530da3d5c613c",
            "subnet_id": "subnet-01ce67268ad3caf11"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0527a36957ba4df4c",
            "route_table_id": "rtb-0984530da3d5c613c",
            "subnet_id": "subnet-01ce67268ad3caf11"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:046839780821:security-group/sg-0e6c85f6a973e6838",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0e6c85f6a973e6838",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "dev-default-sg",
            "name_prefix": "",
            "owner_id": "046839780821",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a7addb1722745a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:046839780821:subnet/subnet-076b38c5b0a0b3f63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076b38c5b0a0b3f63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "046839780821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-west-2a-private-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-west-2a-private-subnet"
            },
            "vpc_id": "vpc-00a7addb1722745a6"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:046839780821:subnet/subnet-01ce67268ad3caf11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ce67268ad3caf11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "046839780821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-west-2a-      public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-west-2a-      public-subnet"
            },
            "vpc_id": "vpc-00a7addb1722745a6"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:046839780821:vpc/vpc-00a7addb1722745a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bbe905cb290fc215",
            "default_route_table_id": "rtb-0acb75e0b3d6b4ab9",
            "default_security_group_id": "sg-0e307218a5b7970e3",
            "dhcp_options_id": "dopt-0b17c91ffcf9b6050",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00a7addb1722745a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0acb75e0b3d6b4ab9",
            "owner_id": "046839780821",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}